<resources>
    <string name="app_name">CarShare</string>
    <string name="Ride">Ride</string>


    <string name="a">Save money and reduce the cost of fuel</string>
    <string name="b">Share with love</string>
    <string name="c">Same destination, more companions</string>
    <string name="d">Aman</string>
    <string name="enter_your_car_model">Enter your Car Model</string>
    <string name="driver_detail">Driver Detail</string>
    <string name="name">Name</string>
    <string name="enter_your_vehicle_number">Vehicle number</string>

    <string name="enter_your_adhaar_number">Enter your Adhaar Number</string>
    <string name="enter_your_city_name">Enter your City Name</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="start_location">Start Location</string>
    <string name="update_profile">Update Profile</string>
    <string name="updated">Updated !!!</string>
    <string name="post_ride">Post ride</string>
    <string name="login">login</string>
    <string name="sign_up">signUp</string>
    <string name="Login">Login</string>
    <string name="enter_username">ENTER USER NAME</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">create account</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email">Enter email</string>
    <string name="next_btn">Next</string>
    <string name="verify_no">Verify number through otp</string>
    <string name="login_btn">Login</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="otp_text">Otp Text</string>
    <string name="otp_verification_text">otp verification text</string>
    <string name="otp_description_text">Otp Description Text</string>
    <string name="post_ride1">Post Ride</string>
    <string name="SignUp">SignUp</string>
    <string name="welcome">Welcome to Mutual Car Sharing</string>
    <string name="mobile">Mobile</string>


    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

</resources>