<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#80CEF1"
    android:layout_height="match_parent">
    <LinearLayout

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"

    android:paddingHorizontal="30dp"
    tools:context=".PassengerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:text="Passsenger Details"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

    <EditText
        android:id="@+id/P_name"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="21dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangularfield"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingVertical="15dp"
        android:paddingLeft="60dp"/>

    <EditText
        android:id="@+id/P_aadhar"
        android:layout_width="match_parent"
        android:layout_below="@+id/P_name"
        android:layout_marginBottom="21dp"
        android:layout_height="50dp"
        android:background="@drawable/rectangularfield"
        android:hint="@string/enter_your_adhaar_number"
        android:inputType="text|number"
        android:paddingVertical="15dp"
        android:paddingLeft="60dp"
        />
    <EditText
    android:id="@+id/P_phone"
    android:layout_below="@+id/P_aadhar"
    android:layout_marginBottom="21dp"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/rectangularfield"
    android:hint="@string/enter_your_mobile_number"
    android:inputType="phone"
    android:paddingVertical="15dp"
    android:paddingLeft="60dp"
     />

    <EditText
        android:id="@+id/P_city"
        android:layout_below="@+id/P_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangularfield"
        android:hint="@string/enter_your_city_name"
        android:paddingVertical="15dp"
        android:paddingLeft="60dp"
         />
    </RelativeLayout>
    <Button
        android:id="@+id/SubmitPassengerButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_height="60dp"
        android:visibility="invisible"
        android:text="@string/submit"
        />
        <Button
            android:id="@+id/matchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="#F10E0E"
            android:onClick="Match"
            android:text="Match Your Driver" />
    </LinearLayout>
</ScrollView>