<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8851D"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/Login"
            android:textColor="#100000"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_username"
                app:boxStrokeColor="#070010"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="#05000C"
                app:hintTextColor="#05000C"
                app:startIconDrawable="@drawable/user_icon"
                app:startIconTint="#080112">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F30A0A0B"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_password"
                app:boxStrokeColor="#070010"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="#05000C"
                app:hintTextColor="#05000C"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="#080112">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#F30A0A0B"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:background="#00000000"
                    android:textColor="#0A0A0B"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" >

                </Button>

            </RelativeLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#E81414"
                android:text="@string/login"
                android:transitionName="transition_login_welcome"
                android:onClick="callLoginWelcome"
                android:textColor="#FCFCFD"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/login_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:layout_gravity="center"
                android:textColor="#0A0A0B"
                android:transitionName="transition_login_signup"
                android:onClick="callLoginSignUp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>