<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"

    android:transitionName="transition_login_signup"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="#0E0D0D"
            android:textSize="37sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/full_name_icon"
                android:hint="@string/enter_full_name"
                app:startIconTint="#0B0A0A"
                app:hintTextColor="#0B0A0A"
                android:textColorHint="#0B0A0A"
                app:endIconMode="clear_text"
                app:endIconTint="#0B0A0A"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#0B0A0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/user_icon"
                android:hint="@string/enter_username"
                app:startIconTint="#0B0A0A"
                app:hintTextColor="#0B0A0A"
                android:textColorHint="#0B0A0A"
                app:endIconMode="clear_text"
                app:endIconTint="#0B0A0A"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#0B0A0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/email_icon"
                android:hint="@string/enter_email"
                app:startIconTint="#0B0A0A"
                app:hintTextColor="#CC1111"
                android:textColorHint="#0B0A0A"
                app:endIconMode="clear_text"
                app:endIconTint="#0B0A0A"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#0B0A0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/password_icon"
                android:hint="@string/enter_password"
                app:startIconTint="#0B0A0A"
                app:hintTextColor="#0B0A0A"
                android:textColorHint="#0B0A0A"
                app:passwordToggleTint="#0B0A0A"
                app:passwordToggleEnabled="true"
                app:endIconTint="#0B0A0A"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#0B0A0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="#9A0707"
            android:textColor="#FCFCFD"
            android:onClick="CallNextSignUpScreen"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_login_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:background="#00000000"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>

    </LinearLayout>

</ScrollView>