<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp3class"
    android:background="#F1D47E"
    android:padding="30dp"
    android:id="@+id/signup_3rd_screen_scroll_view"
    android:transitionName="transition_OTP_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/quantum_black_100"
            android:textSize="37sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:background="@drawable/black_border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/phone_icon"
                android:hint="@string/enter_phone_number"
                app:startIconTint="#0B0A0A"
                app:hintTextColor="#0B0A0A"
                android:textColorHint="#0B0A0A"
                app:endIconMode="clear_text"
                app:endIconTint="#0B0A0A"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#0B0A0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorPrimary"
            android:onClick="CallVerifyOTPScreen"
            android:textColor="#FCFCFD"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_login_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textColor="#F9F8FA"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>

    </LinearLayout>

</ScrollView>