<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFAFA"
    tools:context=".VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/close_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_text"
            android:textSize="100sp"
            android:textStyle="bold"
            android:textColor="#0C0C0C"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:textSize="26sp"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:textColor="#0C0C0C"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description_text"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:textColor="#0C0C0C"
            android:layout_gravity="center"/>

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="30dp"
            app:itemHeight="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/colorAccent"
            android:itemBackground="@color/white"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="Verify OTP"
            android:textColor="#FDFDFC"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>